<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    tools:openDrawer="end">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/img"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/sign_pattern" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/new_to_edu_ncreate_an_account"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:visibility="gone"
                        tools:ignore="NestedWeights">

                        <Button
                            android:id="@+id/loginGoogle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/sky_blue"
                            android:drawableLeft="@drawable/google"
                            android:padding="15dp"
                            android:text="SignUp with Google"
                            android:textAllCaps="false"
                            android:textColor="@color/white" />

                        <Button
                            android:id="@+id/loginFacebook"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/sky_blue"
                            android:drawableLeft="@drawable/facebook"
                            android:padding="15dp"
                            android:text="SignUp with Facebook"
                            android:textAllCaps="false"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:visibility="gone"
                            tools:ignore="NestedWeights">

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_centerVertical="true"
                                android:background="@color/app_color" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:background="@color/white"
                                android:padding="10dp"
                                android:text="@string/or_continue_with"
                                android:textColor="@color/sky_blue"
                                android:textSize="15sp" />
                        </RelativeLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="20dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/user_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/round_corner_et"
                                android:hint="@string/username"
                                android:inputType="textPersonName"
                                android:maxLines="1"
                                android:padding="10dp" />

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/user_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:background="@drawable/round_corner_et"
                                android:hint="@string/useremail"
                                android:inputType="textEmailAddress"
                                android:padding="10dp" />

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/phn"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:background="@drawable/round_corner_et"
                                android:hint="@string/enter_your_number"
                                android:inputType="phone"
                                android:maxLength="10"
                                android:maxLines="1"
                                android:padding="10dp"
                                android:visibility="gone" />

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/con_pass_lay"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:background="@drawable/round_corner_et"
                                android:padding="2dp"
                                app:boxBackgroundMode="none"
                                app:hintEnabled="false"
                                app:layout_constraintTop_toBottomOf="@id/phn"
                                app:passwordToggleEnabled="true">

                                <EditText
                                    android:id="@+id/password"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@color/white"
                                    android:hint="@string/password"
                                    android:imeOptions="actionDone"
                                    android:inputType="textPassword"
                                    android:padding="10dp" />


                            </com.google.android.material.textfield.TextInputLayout>
                        </LinearLayout>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="end"
                        android:layout_marginEnd="15dp"
                        android:padding="5dp"
                        android:layout_marginBottom="3dp"
                        android:text="@string/next"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/login_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/login"
                    android:textColor="@color/sky_blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <!--    <include-->
    <!--        android:id="@+id/ddd"-->
    <!--        layout="@layout/drawer_lay"-->
    <!--        android:layout_width="200dp"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:layout_gravity="end"-->
    <!--        android:visibility="gone" />-->
</androidx.drawerlayout.widget.DrawerLayout>