<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Login">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/partnerDrawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="end">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <ImageView
                android:id="@+id/img"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/patten_2" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/heading"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:orientation="vertical"
                            android:visibility="gone">

                            <Button
                                android:id="@+id/loginGoogle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/app_color"
                                android:drawableLeft="@drawable/google"
                                android:padding="15dp"
                                android:text="Login with Google"
                                android:textAllCaps="false"
                                android:textColor="@color/white" />

                            <Button
                                android:id="@+id/loginFacebook"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/app_color"
                                android:drawableLeft="@drawable/facebook"
                                android:padding="15dp"
                                android:text="Login with Facebook"
                                android:textAllCaps="false"
                                android:textColor="@color/white" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                tools:ignore="NestedWeights"
                                android:visibility="gone">

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1dp"
                                    android:layout_centerVertical="true"
                                    android:background="@color/app_color" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:background="@color/white"
                                    android:padding="10dp"
                                    android:text="@string/or_continue_with"
                                    android:textSize="15sp" />
                            </RelativeLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:layout_marginVertical="20dp"
                                android:orientation="vertical"
                                >

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/phone"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/round_corner_et"
                                    android:hint="@string/enter_mobile_no_email_id"
                                    android:maxLines="1"
                                    android:singleLine="true"
                                    android:padding="15dp" />

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/password"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:background="@drawable/round_corner_et"
                                    android:hint="@string/password"
                                    android:inputType="textPassword"
                                    android:padding="15dp"
                                    app:passwordToggleEnabled="true" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">

                                    <TextView
                                        android:id="@+id/forgotPass"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:padding="5dp"
                                        android:text="@string/forgotpass"
                                        android:textColor="@color/black"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:id="@+id/next"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginEnd="5dp"
                                        android:layout_weight="1"
                                        android:gravity="end"
                                        android:padding="5dp"
                                        android:text="@string/next"
                                        android:textColor="@color/black"
                                        android:textStyle="bold" />
                                </LinearLayout>


                            </LinearLayout>

                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Don't have an account?"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/SignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/sign_up"
                        android:textColor="@color/sky_blue"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>

        <!--        <include-->
        <!--            android:id="@+id/drawer"-->
        <!--            layout="@layout/partner_drawer_lay"-->
        <!--            android:layout_width="200dp"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:layout_gravity="end" />-->
    </androidx.drawerlayout.widget.DrawerLayout>

</androidx.constraintlayout.widget.ConstraintLayout>